# help-ukraine-bot

./: .envrc  .gitignore  .pylintrc  AUTOMATIC-PR-TEST-DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  CLEAN-ARCHITECTURE-REFACTORING.md  PROPOSED-DEPENDENCIES-UPGRADE.md  README.md  REFACTORING-OPPORTUNITIES.md  UPGRADING-TELEGRAM-CLIENT.md  UPGRADING-TO-PTB-21.md  commands.py  faq.py  guidebook.py  guidebook.yml  knowledge.json  knowledge.py  main.py  pyproject.toml  requirements.txt  settings.toml
.github/: FUNDING.yml
.github/workflow/: build.yml
.github/workflows/: build.yml  deploy-test.yml
docs/: ARCHITECTURE.md  AUTOMATIC-PR-TEST-DEPLOYMENT.md  CLEAN-ARCHITECTURE-REFACTORING.md  REFACTORING-IGUIDEBOOK.md  REMOVE-REMINDER-AND-AUTH.md
scripts/: generate_requirements.sh  typecheck.sh
src/: apartments.py  commands.py  common.py  config.py  education.py  finance.py  general_information.py  guidebook.py  knowledge.py  main.py  medical.py  reminders.py  statistics.py
src/adapters/: __init__.py  telegram_adapter.py  telegram_auth.py
src/application/: __init__.py  authorization_service.py  berlin_help_service.py
src/domain/: __init__.py  models.py  protocols.py
src/infrastructure/: __init__.py  config_loader.py  guidebook_formatter.py  sqlite_statistics.py  yaml_guidebook.py
src/knowledgebase/: guidebook.yml  knowledge.json  vocabulary.yml
src/models/: __init__.py
src/mongo/: __init__.py
src/services/: __init__.py  articles.py
tests/: test_commands.py  test_common.py  test_deps.py  test_guidebook.py  test_integration.py
tests/integration/: __init__.py  (+1 more)
(+7 files in other folders)
