[project]
name = "help-ukraine-bot"
version = "1.0.0"
description = "A Telegram bot providing FAQ answers and helpful information for Ukrainian refugees in Germany"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.3",
    "pycparser==3.0",
    "python-telegram-bot[webhooks]==21.11",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "toml==0.10.2",
    "urllib3==2.6.3",
]

[project.optional-dependencies]
dev = [
    "mypy~=1.15",
    "pytest~=9.0",
    "pylint~=4.0",
    "types-PyYAML~=6.0",
    "types-toml~=0.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy~=1.15",
    "pytest~=9.0",
    "pylint~=4.0",
    "types-PyYAML~=6.0",
    "types-toml~=0.10.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pylint.messages_control]
disable = ["C", "R"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
no_implicit_optional = true
follow_imports = "skip"
